[project]
name = "ai-trip-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "asttokens==3.0.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "dotenv>=0.9.9",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "fastapi>=0.136.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.12",
    "ipykernel==7.2.0",
    "ipython==8.39.0",
    "jedi==0.19.2",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "langchain==1.2.15",
    "langchain-core==1.3.0",
    "langchain-experimental>=0.4.1",
    "langchain-google-community[places]>=3.0.5",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.0",
    "langchain-tavily>=0.2.18",
    "langgraph==1.1.9",
    "langgraph-checkpoint==4.0.2",
    "langgraph-prebuilt==1.0.10",
    "langgraph-sdk==0.3.13",
    "langsmith==0.7.33",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "orjson==3.11.8",
    "ormsgpack==1.12.2",
    "packaging==26.1",
    "parso==0.8.6",
    "platformdirs==4.9.6",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "requests==2.33.1",
    "requests-toolbelt==1.0.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "streamlit>=1.56.0",
    "tenacity==9.1.4",
    "tornado==6.5.5",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "uvicorn>=0.46.0",
    "wcwidth==0.6.0",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]
